external-crates/move/crates/move-compiler/tests/move_2024/naming/type_hole_invalid_location_nested.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:3:31
  │
3 │     public struct P(Pair<u64, _>)
  │                               ^ Invalid usage of a placeholder for type inference '_'. Struct fields require fully specified types. Replace '_' with a specific type or consider adding a new type parameter

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:4:31
  │
4 │     public struct S { f: Pair<_, bool> }
  │                               ^ Invalid usage of a placeholder for type inference '_'. Struct fields require fully specified types. Replace '_' with a specific type or consider adding a new type parameter

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:5:28
  │
5 │     public enum E { P(Pair<_, _>), S { f: vector<_> } }
  │                            ^ Invalid usage of a placeholder for type inference '_'. Enum variant fields require fully specified types. Replace '_' with a specific type or consider adding a new type parameter

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:5:31
  │
5 │     public enum E { P(Pair<_, _>), S { f: vector<_> } }
  │                               ^ Invalid usage of a placeholder for type inference '_'. Enum variant fields require fully specified types. Replace '_' with a specific type or consider adding a new type parameter

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:5:50
  │
5 │     public enum E { P(Pair<_, _>), S { f: vector<_> } }
  │                                                  ^ Invalid usage of a placeholder for type inference '_'. Enum variant fields require fully specified types. Replace '_' with a specific type or consider adding a new type parameter

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:6:21
  │
6 │     const C: vector<_> = vector[0];
  │                     ^ Invalid usage of a placeholder for type inference '_'. Constants require fully specified types. Replace '_' with a specific type

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:7:21
  │
7 │     fun foo(p: Pair<_, vector<u8>>): vector<u8> { p.1 }
  │                     ^ Invalid usage of a placeholder for type inference '_'. Functions require fully specified types. Replace '_' with a specific type or consider adding a new type parameter
  │
  = Only 'macro' functions can use '_' in their signatures

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:8:21
  │
8 │     fun bar(): Pair<_, _> { Pair(any(), any()) }
  │                     ^ Invalid usage of a placeholder for type inference '_'. Functions require fully specified types. Replace '_' with a specific type or consider adding a new type parameter
  │
  = Only 'macro' functions can use '_' in their signatures

error[E03021]: invalid type annotation
  ┌─ tests/move_2024/naming/type_hole_invalid_location_nested.move:8:24
  │
8 │     fun bar(): Pair<_, _> { Pair(any(), any()) }
  │                        ^ Invalid usage of a placeholder for type inference '_'. Functions require fully specified types. Replace '_' with a specific type or consider adding a new type parameter
  │
  = Only 'macro' functions can use '_' in their signatures
